--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-status": "^1.7.3",
+    "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "socket.io": "^4.8.1",
+    "stripe": "^18.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
